--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,21 +1,62 @@
+html {
+    width: 100vw;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
 body {
     width: 100%;
     min-height: 100%;
     box-sizing: border-box;
-    padding: calc(2vw + 2vh);
-    margin: 0;
+    margin: calc(2vw + 2vh);
 
     #intro {
         display: flex;
         align-items: center;
         flex-direction: column;
+        background-color: black;
+        color: #dad9d9;
+        padding: calc(3vw + 3vh);
+        background-color: #3D433D;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231e221e'/%3E%3Cstop offset='1' stop-color='%231e221e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231e221e'/%3E%3Cstop offset='1' stop-color='%231e221e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%233D433D'/%3E%3Cstop offset='1' stop-color='%233D433D' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+        background-attachment: fixed;
+        background-size: cover;
+
+        h1 {
+            margin: calc(2vw + 2vh);
+            font-size: calc(2vw + 2vh);
+        }
 
         img {
             width: calc(15vw + 15vh);
             border-style: solid;
             border-width: calc(0.5vw + 0.5vh);
-            border-color: black;
+            border-color: gray;
             border-radius: 300vw;
+        }
+
+        p {
+            width: 70vw;
+            font-size: calc(1vw + 1vh);
+            text-align: center;
+            line-height: calc(1.5vw + 1.5vh);
+            margin-bottom: calc(2vw + 2vh);
+        }
+
+        a {
+            padding: calc(1vw + 1vh);
+            background-color: #2c9b40;
+            color: #dad9d9;
+            text-decoration: none;
+            font-size: calc(1vw + 1vh);
+            border-radius: 80px;
+            font-weight: bold;
+            transition: scale 0.25s;
+
+            &:hover {
+                scale: 1.1;
+                color: white;
+            }
         }
     }
 }
