--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,26 +1,30 @@
+$text-color: #dad9d9;
+
 html {
-    width: 100vw;
+    max-width: 100vw;
     box-sizing: border-box;
-    overflow-x: hidden;
+    display: flex;
 }
 
 body {
-    width: 100%;
+    width: 100vw;
     min-height: 100%;
     box-sizing: border-box;
     margin: calc(2vw + 2vh);
+    margin: 0;
 
     #intro {
         display: flex;
         align-items: center;
         flex-direction: column;
         background-color: black;
-        color: #dad9d9;
+        color: $text-color;
         padding: calc(3vw + 3vh);
         background-color: #3D433D;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231e221e'/%3E%3Cstop offset='1' stop-color='%231e221e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231e221e'/%3E%3Cstop offset='1' stop-color='%231e221e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%233D433D'/%3E%3Cstop offset='1' stop-color='%233D433D' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
         background-attachment: fixed;
         background-size: cover;
+        margin: 0;
 
         h1 {
             margin: calc(2vw + 2vh);
@@ -46,7 +50,7 @@ body {
         a {
             padding: calc(1vw + 1vh);
             background-color: #2c9b40;
-            color: #dad9d9;
+            color: $text-color;
             text-decoration: none;
             font-size: calc(1vw + 1vh);
             border-radius: 80px;
@@ -57,6 +61,23 @@ body {
                 scale: 1.1;
                 color: white;
             }
+        }
+    }
+
+    footer {
+        display: flex;
+        background-color: #141414;
+        flex-direction: column;
+        align-items: center;
+        color: $text-color;
+        padding: calc(1vw + 1vh);
+
+        h1 {
+            font-size: calc(2vw + 2vh);
+        }
+
+        a {
+            color: $text-color;
         }
     }
 }
