--- a/css/home.css
+++ b/css/home.css
@@ -64,9 +64,40 @@ body footer {
   color: #dad9d9;
   padding: calc(1vw + 1vh);
 }
+body footer div {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 calc(7vw + 7vh);
+  justify-content: space-between;
+  display: flex;
+}
+body footer div a {
+  color: #dad9d9;
+  align-items: center;
+  width: 10vw;
+  transition: scale 0.25s;
+}
+body footer div a:hover {
+  scale: 1.1;
+}
 body footer h1 {
   font-size: calc(2vw + 2vh);
+  margin: calc(2vw + 2vh) 0;
+}
+body footer img {
+  width: 100%;
+  background-color: #dad9d9;
+  border-radius: calc(0.75vw + 0.75vh);
+  padding: calc(0.5vw + 0.5vh);
+}
+body footer img:hover {
+  background-color: white;
+}
+body footer p {
+  margin-top: calc(3vw + 3vh);
+  font-size: calc(0.8vw + 0.8vh);
 }
 body footer a {
   color: #dad9d9;
+  font-size: calc(0.8vw + 0.8vh);
 }/*# sourceMappingURL=home.css.map */
