--- a/sass/home.scss
+++ b/sass/home.scss
@@ -72,12 +72,49 @@ body {
         color: $text-color;
         padding: calc(1vw + 1vh);
 
+        div {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 0 calc(7vw + 7vh);
+            justify-content: space-between;
+            display: flex;
+
+            a {
+                color: $text-color;
+                align-items: center;
+                width: 10vw;
+                transition: scale 0.25s;
+
+                &:hover {
+                    scale: 1.1
+                }
+            }
+        }
+
         h1 {
             font-size: calc(2vw + 2vh);
+            margin: calc(2vw + 2vh) 0;
+        }
+
+        img {
+            width: 100%;
+            background-color: $text-color;
+            border-radius: calc(0.75vw + 0.75vh);
+            padding: calc(0.5vw + 0.5vh);
+
+            &:hover {
+                background-color: white;
+            }
+        }
+
+        p {
+            margin-top: calc(3vw + 3vh);
+            font-size: calc(0.8vw + 0.8vh);
         }
 
         a {
             color: $text-color;
+            font-size: calc(0.8vw + 0.8vh);
         }
     }
 }
