--- a/sass/home.scss
+++ b/sass/home.scss
@@ -4,6 +4,65 @@ html {
     max-width: 100vw;
     box-sizing: border-box;
     display: flex;
+    font-family: sans-serif;
+}
+
+.buttonLink {
+    padding: calc(1vw + 1vh);
+    background-color: #2c9b40;
+    color: $text-color;
+    text-decoration: none;
+    font-size: calc(1vw + 1vh);
+    border-radius: 80px;
+    font-weight: bold;
+    transition: scale 0.25s;
+
+    &:hover {
+        scale: 1.1;
+        color: white;
+    }
+}
+
+.gameCardContainer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: calc(1vw + 1vh);
+}
+
+.gameCard {
+    width: 20vmax;
+    height: 25vmax;
+    background-color: #343434;
+    color: $text-color;
+    box-sizing: border-box;
+    padding: calc(1.5vw + 1.5vh);
+    border-radius: calc(1vw + 1vh);
+    transition: scale 0.5s;
+    align-items: center;
+    text-decoration: none;
+
+    &:hover {
+        scale: 1.1;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 1.5vmax;
+        font-weight: bold;
+    }
+
+    p {
+        text-align: center;
+        font-size: 1vmax;
+        font-style: italic;
+    }
 }
 
 body {
@@ -46,21 +105,22 @@ body {
             line-height: calc(1.5vw + 1.5vh);
             margin-bottom: calc(2vw + 2vh);
         }
+    }
 
-        a {
-            padding: calc(1vw + 1vh);
-            background-color: #2c9b40;
-            color: $text-color;
-            text-decoration: none;
-            font-size: calc(1vw + 1vh);
-            border-radius: 80px;
-            font-weight: bold;
-            transition: scale 0.25s;
+    #recentGames {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: calc(1vw + 1vh);
+        background-color: $text-color;
+        height: calc(30vw + 30vh);
+        border-style: inset;
+        border-width: calc(1vw + 1vh);
+        border-color: black;
 
-            &:hover {
-                scale: 1.1;
-                color: white;
-            }
+        h1 {
+            font-size: calc(2.5vw + 2.5vh);
+            margin: calc(2vw + 2vh) 0;
         }
     }
 
