--- a/sass/home.scss
+++ b/sass/home.scss
@@ -69,8 +69,10 @@ body {
     width: 100vw;
     min-height: 100%;
     box-sizing: border-box;
-    margin: calc(2vw + 2vh);
     margin: 0;
+}
+
+#homepageBody {
 
     #intro {
         display: flex;
