--- a/css/home.css
+++ b/css/home.css
@@ -186,4 +186,58 @@ body {
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-evenly;
+}
+
+.gamePage {
+  display: flex;
+  flex-direction: column;
+  background-color: #141414;
+  color: #dad9d9;
+}
+.gamePage .gamePageHeader {
+  position: relative;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  justify-content: space-evenly;
+  padding: calc(1vw + 1vh);
+  align-items: center;
+}
+.gamePage .gamePageHeader .slideshowImage {
+  position: absolute;
+  z-index: -1;
+  opacity: 0%;
+  transition: opacity 0.5s;
+  width: 100%;
+}
+.gamePage .gamePageHeader .slideshowImage:first-of-type {
+  opacity: 100%;
+  filter: blur(0.15rem);
+}
+.gamePage .gamePageHeader h1 {
+  text-align: center;
+  font-size: 5vmax;
+  text-shadow: #141414 calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+}
+.gamePage .gamePageHeader p {
+  font-size: 1.5vmax;
+  padding: calc(0.5vw + 0.5vh);
+  text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+}
+.gamePage .gamePageHeader a {
+  width: fit-content;
+}
+.gamePage .gameTechnicalDescription {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: calc(1vw + 1vh);
+}
+.gamePage .gameTechnicalDescription h5 {
+  font-size: calc(1vw + 1vh);
+  margin: calc(1vw + 1vh);
+}
+.gamePage .gameTechnicalDescription p {
+  font-size: calc(1vw + 1vh);
 }/*# sourceMappingURL=home.css.map */
