--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,4 +1,5 @@
 $text-color: #dad9d9;
+$dark-color: #141414;
 
 html {
     max-width: 100vw;
@@ -130,7 +131,7 @@ body {
 
     footer {
         display: flex;
-        background-color: #141414;
+        background-color: $dark-color;
         flex-direction: column;
         align-items: center;
         color: $text-color;
@@ -187,7 +188,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #141414;
+    background-color: $dark-color;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23141414' stroke-width='.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23292929' href='%23s' y='2'/%3E%3Cuse fill='%23292929' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23373737' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23373737' href='%23s'/%3E%3Cuse fill='%23414141' href='%23s' x='2'/%3E%3Cuse fill='%23414141' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%234b4b4b'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%234b4b4b'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23535353'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23141414'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%235a5a5a'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%2319920E'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%2319920E'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%2319920E'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
@@ -196,7 +197,7 @@ body {
     h1 {
         margin: calc(2vw + 2vh);
         font-size: calc(2vw + 2vh);
-        text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+        text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
     }
 
     h2 {
@@ -204,7 +205,7 @@ body {
         box-sizing: border-box;
         padding: calc(2vw + 2vh);
         font-style: italic;
-        text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+        text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
     }
 
     main {
@@ -212,5 +213,68 @@ body {
         flex-direction: column;
         flex-grow: 1;
         justify-content: space-evenly;
+    }
+}
+
+.gamePage {
+    display: flex;
+    flex-direction: column;
+    background-color: $dark-color;
+    color: $text-color;
+
+    .gamePageHeader {
+        position: relative;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        justify-content: space-evenly;
+        padding: calc(1vw + 1vh);
+        align-items: center;
+
+        .slideshowImage {
+            position: absolute;
+            z-index: -1;
+            opacity: 0%;
+            transition: opacity 0.5s;
+            width: 100%;
+        }
+
+        .slideshowImage:first-of-type {
+            opacity: 100%;
+            filter: blur(0.15rem);
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 5vmax;
+            text-shadow: $dark-color calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+        }
+
+        p {
+            font-size: 1.5vmax;
+            padding: calc(0.5vw + 0.5vh);
+            text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+        }
+
+        a {
+            width: fit-content;
+        }
+    }
+
+    .gameTechnicalDescription {
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        padding: calc(1vw + 1vh);
+
+        h5 {
+            font-size: calc(1vw + 1vh);
+            margin: calc(1vw + 1vh);
+        }
+
+        p {
+            font-size: calc(1vw + 1vh);
+        }
     }
 }
