--- a/css/home.css
+++ b/css/home.css
@@ -208,12 +208,9 @@ body {
   position: absolute;
   z-index: -1;
   opacity: 0%;
-  transition: opacity 0.5s;
+  transition: opacity 1s;
   width: 100%;
-}
-.gamePage .gamePageHeader .slideshowImage:first-of-type {
-  opacity: 100%;
-  filter: blur(0.15rem);
+  filter: blur(0.2rem) brightness(50%);
 }
 .gamePage .gamePageHeader h1 {
   text-align: center;
@@ -221,9 +218,11 @@ body {
   text-shadow: #141414 calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
 }
 .gamePage .gamePageHeader p {
-  font-size: 1.5vmax;
+  font-size: 1.75vmax;
+  width: 90%;
   padding: calc(0.5vw + 0.5vh);
   text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+  text-align: center;
 }
 .gamePage .gamePageHeader a {
   width: fit-content;
