--- a/sass/home.scss
+++ b/sass/home.scss
@@ -236,14 +236,15 @@ body {
             position: absolute;
             z-index: -1;
             opacity: 0%;
-            transition: opacity 0.5s;
+            transition: opacity 1s;
             width: 100%;
+            filter: blur(0.2rem) brightness(50%);
         }
 
-        .slideshowImage:first-of-type {
-            opacity: 100%;
-            filter: blur(0.15rem);
-        }
+        // .slideshowImage:first-of-type {
+        //     opacity: 100%;
+        //     filter: blur(0.15rem);
+        // }
 
         h1 {
             text-align: center;
@@ -252,9 +253,11 @@ body {
         }
 
         p {
-            font-size: 1.5vmax;
+            font-size: 1.75vmax;
+            width: 90%;
             padding: calc(0.5vw + 0.5vh);
             text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+            text-align: center;
         }
 
         a {
