--- a/css/home.css
+++ b/css/home.css
@@ -212,20 +212,41 @@ body {
   width: 100%;
   filter: blur(0.2rem) brightness(50%);
 }
-.gamePage .gamePageHeader h1 {
-  text-align: center;
-  font-size: 5vmax;
-  text-shadow: #141414 calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+@media screen and (orientation: landscape) {
+  .gamePage .gamePageHeader h1 {
+    text-align: center;
+    font-size: 5vmax;
+    text-shadow: #141414 calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+  }
+  .gamePage .gamePageHeader p {
+    font-size: 1.5vmax;
+    width: 90%;
+    padding: calc(0.5vw + 0.5vh);
+    text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+    text-align: center;
+  }
+  .gamePage .gamePageHeader a {
+    width: fit-content;
+    font-size: 1.5vmax;
+  }
 }
-.gamePage .gamePageHeader p {
-  font-size: 1.75vmax;
-  width: 90%;
-  padding: calc(0.5vw + 0.5vh);
-  text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
-  text-align: center;
-}
-.gamePage .gamePageHeader a {
-  width: fit-content;
+@media screen and (orientation: portrait) {
+  .gamePage .gamePageHeader h1 {
+    text-align: center;
+    font-size: 3vmax;
+    text-shadow: #141414 calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+  }
+  .gamePage .gamePageHeader p {
+    font-size: 1vmax;
+    width: 90%;
+    padding: calc(0.5vw + 0.5vh);
+    text-shadow: #141414 calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+    text-align: center;
+  }
+  .gamePage .gamePageHeader a {
+    width: fit-content;
+    font-size: 1vmax;
+  }
 }
 .gamePage .gameTechnicalDescription {
   display: flex;
