--- a/sass/home.scss
+++ b/sass/home.scss
@@ -246,22 +246,46 @@ body {
         //     filter: blur(0.15rem);
         // }
 
-        h1 {
-            text-align: center;
-            font-size: 5vmax;
-            text-shadow: $dark-color calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+        @media screen and (orientation: landscape) {
+            h1 {
+                text-align: center;
+                font-size: 5vmax;
+                text-shadow: $dark-color calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+            }
+
+            p {
+                font-size: 1.5vmax;
+                width: 90%;
+                padding: calc(0.5vw + 0.5vh);
+                text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+                text-align: center;
+            }
+
+            a {
+                width: fit-content;
+                font-size: 1.5vmax;
+            }   
         }
 
-        p {
-            font-size: 1.75vmax;
-            width: 90%;
-            padding: calc(0.5vw + 0.5vh);
-            text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
-            text-align: center;
-        }
+        @media screen and (orientation: portrait) {
+            h1 {
+                text-align: center;
+                font-size: 3vmax;
+                text-shadow: $dark-color calc(0.15vw + 0.15vh) calc(0.15vw + 0.15vh);
+            }
 
-        a {
-            width: fit-content;
+            p {
+                font-size: 1vmax;
+                width: 90%;
+                padding: calc(0.5vw + 0.5vh);
+                text-shadow: $dark-color calc(0.1vw + 0.1vh) calc(0.1vw + 0.1vh);
+                text-align: center;
+            }
+
+            a {
+                width: fit-content;
+                font-size: 1vmax;
+            }   
         }
     }
 
