--- a/css/home.css
+++ b/css/home.css
@@ -51,12 +51,12 @@ html {
 }
 .gameCard h3 {
   text-align: center;
-  font-size: 1.5vmax;
+  font-size: 3vmin;
   font-weight: bold;
 }
 .gameCard p {
   text-align: center;
-  font-size: 1vmax;
+  font-size: 1.5vmin;
   font-style: italic;
 }
 
