--- a/sass/home.scss
+++ b/sass/home.scss
@@ -55,15 +55,16 @@ html {
         width: 100%;
     }
 
+    
     h3 {
         text-align: center;
-        font-size: 1.5vmax;
+        font-size: 3vmin;
         font-weight: bold;
     }
 
     p {
         text-align: center;
-        font-size: 1vmax;
+        font-size: 1.5vmin;
         font-style: italic;
     }
 }
