--- a/css/home.css
+++ b/css/home.css
@@ -104,7 +104,7 @@ body {
   align-items: center;
   padding: calc(1vw + 1vh);
   background-color: #dad9d9;
-  height: calc(30vw + 30vh);
+  height: fit-content;
   border-style: inset;
   border-width: calc(1vw + 1vh);
   border-color: black;
