--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,34 @@ html {
   font-family: sans-serif;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: calc(0.25vw + 0.25vh) calc(1vw + 1vh);
+  box-sizing: border-box;
+  background-color: rgba(20, 20, 20, 0.6862745098);
+  position: fixed;
+  color: #dad9d9;
+  width: 100vw;
+}
+nav a {
+  font-size: 5vmin;
+  transition: color 0.1s, scale 0.1s;
+}
+nav a:hover {
+  color: white;
+  scale: 1.1;
+}
+nav div {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 30vmax;
+}
+nav div a {
+  font-size: 2vmin;
+}
+
 .buttonLink {
   padding: calc(1vw + 1vh);
   background-color: #2c9b40;
@@ -65,6 +93,7 @@ body {
   min-height: 100%;
   box-sizing: border-box;
   margin: 0;
+  background-color: #141414;
 }
 
 #homepageBody #intro {
