--- a/sass/home.scss
+++ b/sass/home.scss
@@ -7,6 +7,7 @@ html {
     min-height: 100vh;
     display: flex;
     font-family: sans-serif;
+    scroll-behavior: smooth;
 }
 
 nav {
@@ -18,10 +19,13 @@ nav {
     position: fixed;
     color: $text-color;
     width: 100vw;
+    z-index: 1;
 
     a {
         font-size: 5vmin;
         transition: color 0.1s, scale 0.1s;
+        color: $text-color;
+        text-decoration: none;
 
         &:hover {
             color: white;
